Separating RunningStats into a standalone class.